syntax = "proto3";

option java_package = "org.example.data_types";
option java_multiple_files = true;

message ElectionRequest {
  uint32 initiator_id = 1;
  repeated uint32 path = 2;
}

message ElectionReply {
  uint32 leader_id = 1;
}

message ElectionResultDeclaration {
  uint32 leader_id = 1;
}

message TransactionRequest {
  uint32 buyer_id = 1;
  string product_name = 2;
  uint32 qty = 3;
}

message TransactionReply {
  bool status_code = 1;
}

message SellerOutOfStockNotification {
  uint32 trader_id = 1;
}

message SellerOutOfStockNotificationReply {
  uint32 seller_id = 1;
  string product_name = 2;
  uint32 qty = 3;
  uint32 price = 4;
}